testData/diagnostics/example.kt
package diagnostics

fun example() = 5 <!USELESS_CAST!>as Int<!>
